--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.8",
+    "@mui/lab": "^7.0.1-beta.19",
+    "@mui/material": "^7.3.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
